@@ -1,5 +1,8 @@
 2006-12-11  Brian Warner  <warner@lothar.com>
 
+	* buildbot/twcompat.py (Interface): remove this import
+	* buildbot/*: import Interface from zope.interface directly
+
 	* buildbot/twcompat.py (providedBy): remove this method
 	* buildbot/*: turn all uses of providedBy(obj, iface) into
 	iface.providedBy(obj)
